Remove connection holder abstraction in favour of Connection with spotbugs warning suppressed